--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Uncivil Landscapes",
   "main": "index.js",
-  "homepage": "https://louisbooth.github.io/uncivil/",
+  "homepage": "https://louisbooth.github.io/uncivil",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
