--- a/package.json
+++ b/package.json
@@ -6,22 +6,12 @@
   "homepage": "https://louisbooth.github.io/uncivil",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d docs"
   },
   "author": "Louis Booth",
   "license": "MIT",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "node-sass": "^4.10.0"
-  },
-  "directories": {
-    "doc": "docs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/louisbooth/uncivil.git"
-  },
-  "bugs": {
-    "url": "https://github.com/louisbooth/uncivil/issues"
   }
 }
